partially correcting jump

--- a/src/scss/partials/_sidebar.scss
+++ b/src/scss/partials/_sidebar.scss
@@ -2,5 +2,8 @@
 
 	&.collapsing{
 		transition:none;
+		.form-group{
+			margin-bottom:0;
+		}
 	}
 }
